<resources>
    <string name="app_name">Great Life</string>

    <!-- Slogans/Taglines  -->
    <string name="stressed_question">Struggling with studies?\nKick off stress with simple activities.</string>
    <string name="app_message">Introducing Great Life, your ultimate health and wellness companion for students! Access mental health resources, track fitness, discover healthy eating guides, and join a vibrant community. Elevate your college experience with Great Life – your guide to a balanced and thriving student life!</string>

    <!-- Main Activity -->
    <string name="welcome_back">Welcome back,</string>
    <string name="how_you_feel">How Do You Feel Today?</string>
    <string name="angry">Angry</string>
    <string name="sad">Sad</string>
    <string name="neutral">Neutral</string>
    <string name="good">Good</string>
    <string name="happy">Happy</string>
    <string name="featuredActivities">Featured Activities</string>
    <string name="meditation">Meditation</string>
    <string name="meditationMessage">Meditation reduces stress, enhances focus, and promotes well-being, fostering mental and physical health benefits.</string>
    <string name="meditationTime">10 – 15 minutes</string>
    <string name="yoga">Yoga</string>
    <string name="yogaMessage">Yoga combines breath, movement, and meditation for holistic well-being, fostering physical and mental harmony.</string>
    <string name="yogaTime">10 – 15 minutes</string>
    <string name="sleepSound">Sleep Sound</string>
    <string name="sleepSoundMessage">Yoga combines breath, movement, and meditation for holistic well-being, fostering physical and mental harmony.</string>
    <string name="sleepSoundTime">5 – 10 minutes</string>
    <string name="mentalWellbeing">Mental Wellbeing</string>
    <string name="food">Food Nutrition</string>
    <string name="foodMessage">A proper diet is very important for physical and mental harmony.</string>
    <string name="foodTime">5 – 10 minutes</string>


</resources>